--- a/shard.yml
+++ b/shard.yml
@@ -1,5 +1,5 @@
 name: joobq
-version: 0.2.1
+version: 0.2.4
 
 authors:
   - Elias J. Perez <eliasjpr@gmail.com>
@@ -15,6 +15,7 @@ license: MIT
 dependencies:
   redis:
     github: stefanwille/crystal-redis
+    version: ~> 2.7.0
 
   cron_parser:
     github: kostya/cron_parser
