--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.7'
 services:
   redis:
-    image: redislabs/redistimeseries:1.4.3
+    image: redis/latest
     ports:
       - "6379:6379"
