Add YAML configuration support for JoobQ job queue system
- Introduced a comprehensive YAML configuration loader, allowing users to define job queues, middlewares, and settings declaratively through YAML files.
- Created multiple environment-specific configuration files (development, production, test) to facilitate easier management of different environments.
- Implemented a robust validation mechanism for YAML configurations to ensure correctness and provide helpful error messages.
- Updated the shard.yml to include the new YAML dependency, enhancing the overall functionality of the JoobQ system.

These changes significantly improve the configurability and maintainability of the JoobQ system, making it easier for users to manage job queue settings through a more intuitive YAML format.

--- a/shard.yml
+++ b/shard.yml
@@ -15,6 +15,7 @@ license: MIT
 dependencies:
   redis:
     github: stefanwille/crystal-redis
-
   cron_parser:
     github: kostya/cron_parser
+  yaml:
+    github: crystal-lang/yaml
