--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -15,7 +15,7 @@ jobs:
 
     services:
       redis:
-        image: redislabs/redis
+        image: redis
         options: >-
           --health-cmd "redis-cli ping"
           --health-interval 10s
